<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Hamers</string>

    <!-- General -->
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="ok">Oké</string>
    <string name="send">Verstuur</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="drawer_array">
        <item>Quotes</item>
        <item>Leden</item>
        <item>Activiteiten</item>
        <item>Bieren</item>
        <item>Moties</item>
        <item>Instellingen</item>
    </string-array>

    <!-- Mainactivity -->

    <!-- Quote list -->
        <!-- Action bar -->
        <string name="action_new_quote">Nieuwe quote</string>
        <string name="action_search_quote">Zoek quote</string>

    <!-- Dialogs -->
        <!-- New quote dialog -->
        <string name="quote">Wat zei die lul?</string>
        <string name="send_quote">Post</string>
        <string name="cancel_quote">Cancel</string>
        <string name="quote_hint">Typ dan heumeu!</string>

        <!-- Api key dialog -->
        <string name="apikeydialogtitle">Voer je API-key in!</string>
        <string name="apikeydialogmessage">Deze kan bemachtigd worden op www.zondersikkel.nl</string>

        <!-- Dialog buttons -->
        <string name="dialog_positive">Ok</string>
        <string name="dialog_negative">Cancel</string>

    <!-- Reviews -->
        <!-- New review -->
        <string name="new_review">Nieuwe review</string>
        <string name="review_hint">Wat vonden we er van?</string>
        <string name="rating">Cijfer: 1</string>
        <string name="pick_date">Proefdatum :</string>
        <string name="pick_date_button">Datum</string>
        <string name="pick_time_button">Tijd</string>

    <!-- Events -->
        <!-- Action bar -->
        <string name="action_new_event">Nieuwe activiteit</string>
        <string name="action_search_event">Zoek activiteit</string>
        <!-- Event details -->
        <string name="event_switch">Ik kom: </string>
        <string name="event_aanwezig">Aanwezig: </string>
        <string name="event_afwezig">Afwezig: </string>
        <string name="event_aanwezig_button">Aanwezig</string>
        <string name="event_afwezig_button">Afwezig</string>
        <!-- New event -->
        <string name="new_event">Nieuwe activiteit</string>
        <string name="event_title">Naam</string>
        <string name="event_description">Wat gaan we doen?</string>
        <string name="date">Datum: </string>
        <string name="end_time">End time: </string>
        <string name="deadline">Deadline: </string>

    <!-- Beers -->
        <!-- Action bar -->
        <string name="action_new_beer">Nieuw biertje</string>
        <string name="action_search_beer">Zoek biertje</string>
        <!-- New beer -->
        <string name="new_beer">Nieuw biertje</string>
        <string name="beer_name">Naam</string>
        <string name="beer_picture">URL naar afbeelding</string>
        <string name="beer_soort">Soort</string>
        <string name="beer_percentage">Percentage (e.g. 8.0%)</string>
        <string name="beer_brewer">Brouwer</string>
        <string name="beer_country">Land</string>

    <!-- Motions -->
        <string name="motiontypetext">Motietype:</string>
        <string name="motie_nietchill">Motie van niet chill</string>
        <string name="motie_arelaxed">Motie van vet arelaxed</string>
        <string name="motie_duurtlang">Motie van duurt lang</string>

        <string name="motion_hint">Wat is er stuk?</string>
        <string name="motion_body">Huilie huilie in dit veld.</string>
        <string name="create_motion">Dien motie in</string>

    <!-- Settings -->
        <!-- Notifications -->
        <string name="pushnotifications">Push notificaties</string>
        <string name="push_title">Push notificaties</string>
        <string name="pref_summaryOn">Push notifications enabled</string>
        <string name="pref_summaryOff">Push notifications disabled</string>

        <!-- API key -->
        <string name="apikey_category">API Key</string>
        <string name="apikey_summary">You can get your key on the website.</string>
        <string name="apikey_hint">Copy+paste your key here..</string>

        <!-- Sorting -->
        <string name="sorting_category">Sorteren</string>
        <!-- Users -->
        <array name="usersort_array_values">
            <item>none</item>
            <item>name</item>
            <item>quotecount</item>
            <item>reviewcount</item>
        </array>
        <array name="usersort_array">
            <item>Niet sorteren</item>
            <item>Sorteer op naam</item>
            <item>Sorteer op aantal quotes</item>
            <item>Sorteer op aantal reviews</item>
        </array>
        <!-- Beer -->
        <array name="beersort_array_values">
            <item>none</item>
            <item>name</item>
            <item>rating</item>
        </array>
        <array name="beersort_array">
            <item>Niet sorteren</item>
            <item>Sorteer op naam</item>
            <item>Sorteer op cijfer</item>
        </array>

    <!-- Toasts -->
        <string name="toast_downloaderror">Fout bij het downloaden</string>
        <string name="toast_downloading">De gegevens worden gedownload</string>
        <string name="toast_userloaderror">Fout bij het laden van de leden</string>
        <string name="toast_reviewloaderror">Fout bij het laden van de reviews</string>
        <string name="toast_storekeymemory">"Een apikey kan ingevuld worden in het instellingen scherm"</string>

    <!-- Sorting -->
        <string name="sort_username">Sorteer op naam</string>
        <string name="sort_quotes">Sorteer op aantal quotes</string>
        <string name="sort_reviews">Sorteer op aantal reviews</string>
        <string name="sort_rating">Sorteer op cijfer</string>
        <string name="sort_name">Sorteer op naam</string>
</resources>
