<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/motiontypetext"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/motionradiogroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp">

                <RadioButton
                    android:id="@+id/radio_duurtlang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motie_duurtlang" />

                <RadioButton
                    android:id="@+id/radio_arelaxed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motie_arelaxed" />

                <RadioButton
                    android:id="@+id/radio_nietchill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motie_nietchill" />
            </RadioGroup>

            <EditText
                android:id="@+id/motion_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/motion_hint"
                android:inputType="textMultiLine"
                android:padding="20dp" />

            <EditText
                android:id="@+id/motion_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="16dp"
                android:hint="@string/motion_body"
                android:inputType="textMultiLine"
                android:padding="20dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/sendmotion_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/create_motion" />
    </LinearLayout>
</RelativeLayout>